--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Countries</h1>
+<h1>Países</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nome</th>
       <th>Uf</th>
       <th colspan="3"></th>
     </tr>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= country.name %></td>
         <td><%= country.uf %></td>
-        <td><%= link_to 'Show', country %></td>
-        <td><%= link_to 'Edit', edit_country_path(country) %></td>
-        <td><%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Visualizar', country %></td>
+        <td><%= link_to 'Alterar', edit_country_path(country) %></td>
+        <td><%= link_to 'Excluir', country, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Country', new_country_path %>
+<%= link_to 'Novo País', new_country_path %>
